# ecommerce-project

./: db.sqlite3  pyproject.toml  requirements.txt
ecommerce_app/: models.py  urls.py
ecommerce_app/migrations/: 0001_initial.py
ecommerce_project/: settings.py  urls.py
